--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -10,14 +10,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          node-version: '14'
+          python-version: '3.x'
       - name: Install dependencies
-        run: npm install node-fetch@2
-      - name: Fetch and process data
-        run: node fetch-notion-data.js
+        run: |
+          python -m pip install --upgrade pip
+          pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client
+      - name: Fetch Google Calendar data
+        run: python fetch_google_calendar_data.py
+        env:
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
       - name: Commit and push if changed
         run: |
           git config --global user.name 'GitHub Action'
