--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -1,29 +1,61 @@
-name: Update Chart Data
+name: Daily Calendar-Notion Sync
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs at 00:00 UTC every day
+    - cron: '0 2 * * *'  # Runs at 2:00 AM UTC every day
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
-  update-data:
+  sync:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client
-      - name: Fetch Google Calendar data
-        run: python fetch_google_calendar_data.py
-      - name: Commit and push if changed
-        run: |
-          git config --global user.name 'GitHub Action'
-          git config --global user.email 'action@github.com'
-          git add -A
-          git commit -m "Update chart data" || exit 0
-          git push
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.9'
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client notion-client
+
+    - name: Run sync script
+      run: |
+        python fetch_google_calendar_data.py 2>&1 | tee output.log
+      continue-on-error: true
+
+    - name: Check for errors
+      run: |
+        if grep -q "Traceback" output.log; then
+          echo "Error occurred in script execution:"
+          cat output.log
+          echo "Python version:"
+          python --version
+          echo "Installed packages:"
+          pip list
+          echo "Script contents:"
+          cat fetch_google_calendar_data.py
+          exit 1
+        else
+          echo "Script executed successfully"
+          cat output.log
+        fi
+
+    - name: List directory contents
+      if: failure()
+      run: |
+        echo "Contents of the current directory:"
+        ls -la
+
+    - name: Commit and push if changed
+      if: success()
+      run: |
+        git config --global user.name 'GitHub Action'
+        git config --global user.email 'action@github.com'
+        git add -A
+        git commit -m "Update chart data" || exit 0
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.PAT }}
