--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.PAT }}
     
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -55,7 +57,6 @@ jobs:
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
         git add -A
-        git commit -m "Update chart data" || exit 0
-        git push
+        git diff --quiet && git diff --staged --quiet || (git commit -m "Update chart data" && git push)
       env:
         GITHUB_TOKEN: ${{ secrets.PAT }}
