--- a/data/chart-data-Projects.json
+++ b/data/chart-data-Projects.json
@@ -5,6 +5,7 @@
     "end": "2024-09-10T14:00:00+02:00",
     "value": 1,
     "summary": "project",
+    "description": "(No description)",
     "calendar": "Projects"
   },
   {
@@ -13,6 +14,7 @@
     "end": "2024-09-10T19:00:00+02:00",
     "value": 1,
     "summary": "project",
+    "description": "(No description)",
     "calendar": "Projects"
   },
   {
@@ -21,6 +23,7 @@
     "end": "2024-09-11T19:00:00+02:00",
     "value": 1,
     "summary": "project",
+    "description": "(No description)",
     "calendar": "Projects"
   },
   {
@@ -29,6 +32,7 @@
     "end": "2024-09-13T18:00:00+02:00",
     "value": 1,
     "summary": "project",
+    "description": "(No description)",
     "calendar": "Projects"
   },
   {
@@ -37,6 +41,7 @@
     "end": "2024-09-21T12:30:00+02:00",
     "value": 1,
     "summary": "Proect website ui focus",
+    "description": "(No description)",
     "calendar": "Projects"
   },
   {
@@ -45,6 +50,7 @@
     "end": "2024-09-21T17:30:00+02:00",
     "value": 1,
     "summary": "Proect website ui focus",
+    "description": "(No description)",
     "calendar": "Projects"
   },
   {
@@ -53,6 +59,7 @@
     "end": "2024-09-21T19:30:00+02:00",
     "value": 1,
     "summary": "Proect website ui focus",
+    "description": "(No description)",
     "calendar": "Projects"
   },
   {
@@ -61,6 +68,7 @@
     "end": "2024-09-21T22:30:00+02:00",
     "value": 1,
     "summary": "Proect website ui focus",
+    "description": "(No description)",
     "calendar": "Projects"
   },
   {
@@ -69,6 +77,7 @@
     "end": "2024-09-22T19:00:00+02:00",
     "value": 1,
     "summary": "Proect website ui focus",
+    "description": "(No description)",
     "calendar": "Projects"
   },
   {
@@ -77,6 +86,7 @@
     "end": "2024-09-23T10:30:00+02:00",
     "value": 1,
     "summary": "Twitter strategy + start",
+    "description": "(No description)",
     "calendar": "Projects"
   },
   {
@@ -85,6 +95,7 @@
     "end": "2024-09-23T16:00:00+02:00",
     "value": 1,
     "summary": "Life plan",
+    "description": "(No description)",
     "calendar": "Projects"
   },
   {
@@ -93,6 +104,7 @@
     "end": "2024-09-23T17:30:00+02:00",
     "value": 1,
     "summary": "Learning plan",
+    "description": "(No description)",
     "calendar": "Projects"
   },
   {
@@ -101,6 +113,25 @@
     "end": "2024-10-06T19:15:00+02:00",
     "value": 1,
     "summary": "test",
+    "description": "(No description)",
+    "calendar": "Projects"
+  },
+  {
+    "date": "2024-10-09T15:30:00+02:00",
+    "start": "2024-10-09T15:30:00+02:00",
+    "end": "2024-10-09T18:30:00+02:00",
+    "value": 1,
+    "summary": "Full stack app, finish",
+    "description": "(No description)",
+    "calendar": "Projects"
+  },
+  {
+    "date": "2024-10-09T18:00:00+02:00",
+    "start": "2024-10-09T18:00:00+02:00",
+    "end": "2024-10-09T19:00:00+02:00",
+    "value": 1,
+    "summary": "AI Engineering Bootcamp -  First Class Free",
+    "description": "Ironhack Netherlands: Tech Careers and Learnings \ud83d\ude80\nWednesday, October 9 at 6:00 PM\n\n\ud83d\udea8(https://events.ironhack.com/r/ai-engineering-first-class-free) \ud83d\udea8 Join Isabella Bicalho, our Lead Instructor in AI Engineering, to learn more about o...\n\nhttps://www.meetup.com/ironhack-amsterdam/events/303723129/",
     "calendar": "Projects"
   }
 ]
