data added to supabase

--- a/data/chart-data-Projects.json
+++ b/data/chart-data-Projects.json
@@ -6,7 +6,8 @@
     "value": 1,
     "summary": "project",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "ff0e34d8f63efeeeab0c7295fb6d9e59"
   },
   {
     "date": "2024-09-10T18:00:00+02:00",
@@ -15,7 +16,8 @@
     "value": 1,
     "summary": "project",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "d3c24685253016913666faf921b298c1"
   },
   {
     "date": "2024-09-11T14:00:00+02:00",
@@ -24,7 +26,8 @@
     "value": 1,
     "summary": "project",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "e6b7364de94a56b1a644aa7b14c1db6c"
   },
   {
     "date": "2024-09-13T14:00:00+02:00",
@@ -33,7 +36,8 @@
     "value": 1,
     "summary": "project",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "78efd523c74184279d8c636583f596ea"
   },
   {
     "date": "2024-09-21T08:30:00+02:00",
@@ -42,7 +46,8 @@
     "value": 1,
     "summary": "Proect website ui focus",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "9535e83f4e6ffe1efdc7dae1f1f7b9dd"
   },
   {
     "date": "2024-09-21T14:30:00+02:00",
@@ -51,7 +56,8 @@
     "value": 1,
     "summary": "Proect website ui focus",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "189809124552f6072bf1a83a0cd6787f"
   },
   {
     "date": "2024-09-21T18:15:00+02:00",
@@ -60,7 +66,8 @@
     "value": 1,
     "summary": "Proect website ui focus",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "3b287312610e3d699aca2de9caa14e92"
   },
   {
     "date": "2024-09-21T21:00:00+02:00",
@@ -69,7 +76,8 @@
     "value": 1,
     "summary": "Proect website ui focus",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "402e2ddcaa8ea221e45d79953daaeee6"
   },
   {
     "date": "2024-09-22T15:00:00+02:00",
@@ -78,7 +86,8 @@
     "value": 1,
     "summary": "Proect website ui focus",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "bc62659f5cfcef54db766f2cd7dfd4b5"
   },
   {
     "date": "2024-09-23T08:30:00+02:00",
@@ -87,7 +96,8 @@
     "value": 1,
     "summary": "Twitter strategy + start",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "06b834cf293162c9f5f30bc817a09e09"
   },
   {
     "date": "2024-09-23T14:30:00+02:00",
@@ -96,7 +106,8 @@
     "value": 1,
     "summary": "Life plan",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "b85058202201483ed9425c01c4ebdbbd"
   },
   {
     "date": "2024-09-23T16:00:00+02:00",
@@ -105,7 +116,8 @@
     "value": 1,
     "summary": "Learning plan",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "a73994e884c3577b86556ce181be5a8c"
   },
   {
     "date": "2024-10-06T16:45:00+02:00",
@@ -114,7 +126,8 @@
     "value": 1,
     "summary": "test",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "6223b6f0c525a196bbede32a5f7d5b06"
   },
   {
     "date": "2024-10-09T15:30:00+02:00",
@@ -123,7 +136,8 @@
     "value": 1,
     "summary": "Full stack app, finish",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "7de1d71918c4e19d2929f84cbbf01192"
   },
   {
     "date": "2024-10-09T18:00:00+02:00",
@@ -132,7 +146,8 @@
     "value": 1,
     "summary": "AI Engineering Bootcamp -  First Class Free",
     "description": "Ironhack Netherlands: Tech Careers and Learnings \ud83d\ude80\nWednesday, October 9 at 6:00 PM\n\n\ud83d\udea8(https://events.ironhack.com/r/ai-engineering-first-class-free) \ud83d\udea8 Join Isabella Bicalho, our Lead Instructor in AI Engineering, to learn more about o...\n\nhttps://www.meetup.com/ironhack-amsterdam/events/303723129/",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "a4510598214e35810e1f0468dd33662d"
   },
   {
     "date": "2024-10-10T08:00:00+02:00",
@@ -141,7 +156,8 @@
     "value": 1,
     "summary": "New Event",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "523235706e6d83fbf1205d7611741fe9"
   },
   {
     "date": "2024-10-10T16:00:00+02:00",
@@ -150,7 +166,8 @@
     "value": 1,
     "summary": "New Event",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "11253c249f88587b0ae50cf4a317fdc8"
   },
   {
     "date": "2024-10-11T14:15:00+02:00",
@@ -159,7 +176,8 @@
     "value": 1,
     "summary": "New Event",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "8d69ed105cccffa709a32d0f6c25170f"
   },
   {
     "date": "2024-10-11T18:00:00+02:00",
@@ -168,7 +186,8 @@
     "value": 1,
     "summary": "YC Startup School (User Group) Meetup",
     "description": "YC Startup School (User Group) Amsterdam\nFriday, October 11 at 6:00 PM\n\nMonthly meetup for (aspiring) founders. It\u2019s an informal gathering over beers where you can find inspiration and encouragement to continue working on ...\n\nhttps://www.meetup.com/startup-school-amsterdam/events/296796621/",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "924b339eb487ffb540e897b27ac97e74"
   },
   {
     "date": "2024-10-13T07:15:00+02:00",
@@ -177,7 +196,8 @@
     "value": 1,
     "summary": "New Event",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "5343ee9e9b026e71d7ccdef60ef33312"
   },
   {
     "date": "2024-10-14T06:30:00+02:00",
@@ -186,7 +206,8 @@
     "value": 1,
     "summary": "marketing",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "f00f643a2f30e5b2ac1d590b89f913b7"
   },
   {
     "date": "2024-10-14T14:00:00+02:00",
@@ -195,7 +216,8 @@
     "value": 1,
     "summary": "courses",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "16e113da6b6939ada1cec5a4d2003977"
   },
   {
     "date": "2024-10-16T17:00:00+02:00",
@@ -204,7 +226,8 @@
     "value": 1,
     "summary": "research",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "69c4e3d5092268c753b25615db2ab785"
   },
   {
     "date": "2024-10-17T16:00:00+02:00",
@@ -213,34 +236,38 @@
     "value": 1,
     "summary": "New Event",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "cea96d0b04d1ec31f17ac1f1b871dc06"
   },
   {
-    "date": "2024-10-19T11:30:00+02:00",
-    "start": "2024-10-19T11:30:00+02:00",
-    "end": "2024-10-19T18:45:00+02:00",
+    "date": "2024-10-19T12:00:00+02:00",
+    "start": "2024-10-19T12:00:00+02:00",
+    "end": "2024-10-19T15:45:00+02:00",
     "value": 1,
     "summary": "find services to offer",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "855cc3803f915e77026ba58fed501ffa"
   },
   {
-    "date": "2024-10-21T16:15:00+02:00",
-    "start": "2024-10-21T16:15:00+02:00",
+    "date": "2024-10-21T17:15:00+02:00",
+    "start": "2024-10-21T17:15:00+02:00",
     "end": "2024-10-21T19:00:00+02:00",
     "value": 1,
     "summary": "Planning",
     "description": "1. create a detailed plan how you think it should go in steps\n2. write out what you are going to do that day, create smaller tasks and \nstart doing them\n\nDONT GET LOST",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "176151ecb142ba1ebc24b52c628b8ade"
   },
   {
-    "date": "2024-10-22T15:00:00+02:00",
-    "start": "2024-10-22T15:00:00+02:00",
+    "date": "2024-10-22T16:15:00+02:00",
+    "start": "2024-10-22T16:15:00+02:00",
     "end": "2024-10-22T18:00:00+02:00",
     "value": 1,
     "summary": "Business",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "a09cd37aa45e1b34656ce5eb787fb2d5"
   },
   {
     "date": "2024-10-22T18:00:00+02:00",
@@ -249,7 +276,8 @@
     "value": 1,
     "summary": "Educational video + notes",
     "description": "(No description)",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "0d08e34044a470319b00081556fa5d9b"
   },
   {
     "date": "2024-10-23T16:15:00+02:00",
@@ -258,6 +286,17 @@
     "value": 1,
     "summary": "Business",
     "description": "planning will be done on monday",
-    "calendar": "Projects"
+    "calendar_name": "Projects",
+    "id": "766c286a3ea4625419d326a898bf5372"
+  },
+  {
+    "date": "2024-10-25T17:00:00+02:00",
+    "start": "2024-10-25T17:00:00+02:00",
+    "end": "2024-10-25T19:00:00+02:00",
+    "value": 1,
+    "summary": "educational videos",
+    "description": "(No description)",
+    "calendar_name": "Projects",
+    "id": "7dafe89483ca68fa27f92b617d3e2b33"
   }
 ]
