--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -1,4 +1,4 @@
-name: Daily Calendar-Notion Sync
+name: Daily Calendar-Notion Sync and Supabase Update
 
 on:
   schedule:
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
-  sync:
+  sync-and-update:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -21,11 +21,26 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client notion-client
+        pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client notion-client python-dotenv supabase
 
-    - name: Run sync script
+    - name: Run fetch Google Calendar data script
       run: |
         python fetch_google_calendar_data.py 2>&1 | tee output.log
+      env:
+        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+      continue-on-error: true
+
+    - name: Run prepare data for Supabase script
+      run: |
+        python prepare_data_for_supabase.py 2>&1 | tee -a output.log
+      continue-on-error: true
+
+    - name: Run database sync script
+      run: |
+        python database.py 2>&1 | tee -a output.log
+      env:
+        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+        SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
       continue-on-error: true
 
     - name: Check for errors
@@ -37,11 +52,9 @@ jobs:
           python --version
           echo "Installed packages:"
           pip list
-          echo "Script contents:"
-          cat fetch_google_calendar_data.py
           exit 1
         else
-          echo "Script executed successfully"
+          echo "Scripts executed successfully"
           cat output.log
         fi
 
@@ -57,6 +70,6 @@ jobs:
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
         git add -A
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update chart data" && git push)
+        git diff --quiet && git diff --staged --quiet || (git commit -m "Update chart data and sync with Supabase" && git push)
       env:
         GITHUB_TOKEN: ${{ secrets.PAT }}
