--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -1,4 +1,4 @@
-name: Daily Calendar-Notion Sync and Supabase Update
+name: Daily Calendar-Notion Sync
 
 on:
   schedule:
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
-  sync-and-update:
+  sync:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -21,26 +21,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client notion-client python-dotenv supabase
+        pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client notion-client
 
-    - name: Run fetch Google Calendar data script
+    - name: Run sync script
       run: |
         python fetch_google_calendar_data.py 2>&1 | tee output.log
-      env:
-        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-      continue-on-error: true
-
-    - name: Run prepare data for Supabase script
-      run: |
-        python prepare_data_for_supabase.py 2>&1 | tee -a output.log
-      continue-on-error: true
-
-    - name: Run database sync script
-      run: |
-        python database.py 2>&1 | tee -a output.log
-      env:
-        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-        SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
       continue-on-error: true
 
     - name: Check for errors
@@ -52,9 +37,11 @@ jobs:
           python --version
           echo "Installed packages:"
           pip list
+          echo "Script contents:"
+          cat fetch_google_calendar_data.py
           exit 1
         else
-          echo "Scripts executed successfully"
+          echo "Script executed successfully"
           cat output.log
         fi
 
@@ -70,6 +57,6 @@ jobs:
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
         git add -A
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update chart data and sync with Supabase" && git push)
+        git diff --quiet && git diff --staged --quiet || (git commit -m "Update chart data" && git push)
       env:
         GITHUB_TOKEN: ${{ secrets.PAT }}
