--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -21,28 +21,38 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client notion-client
+        pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client notion-client pandas supabase
 
-    - name: Run sync script
+    - name: Run fetch_google_calendar_data.py
       run: |
-        python fetch_google_calendar_data.py 2>&1 | tee output.log
+        python fetch_google_calendar_data.py 2>&1 | tee output_fetch.log
+      continue-on-error: true
+
+    - name: Run prepare_data_for_supabase.py
+      run: |
+        python prepare_data_for_supabase.py 2>&1 | tee output_prepare.log
+      continue-on-error: true
+
+    - name: Run database.py
+      run: |
+        python database.py 2>&1 | tee output_database.log
       continue-on-error: true
 
     - name: Check for errors
       run: |
-        if grep -q "Traceback" output.log; then
+        if grep -q "Traceback" output_fetch.log output_prepare.log output_database.log; then
           echo "Error occurred in script execution:"
-          cat output.log
+          cat output_fetch.log output_prepare.log output_database.log
           echo "Python version:"
           python --version
           echo "Installed packages:"
           pip list
           echo "Script contents:"
-          cat fetch_google_calendar_data.py
+          cat fetch_google_calendar_data.py prepare_data_for_supabase.py database.py
           exit 1
         else
-          echo "Script executed successfully"
-          cat output.log
+          echo "All scripts executed successfully"
+          cat output_fetch.log output_prepare.log output_database.log
         fi
 
     - name: List directory contents
@@ -57,6 +67,6 @@ jobs:
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
         git add -A
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update chart data" && git push)
+        git diff --quiet && git diff --staged --quiet || (git commit -m "Update chart data and sync with Supabase" && git push)
       env:
         GITHUB_TOKEN: ${{ secrets.PAT }}
