--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -8,6 +8,12 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
+    env:
+      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+      GOOGLE_CALENDAR_CREDENTIALS: ${{ secrets.GOOGLE_CALENDAR_CREDENTIALS }}
+      # Add any other environment variables you need
+
     steps:
     - uses: actions/checkout@v4
       with:
@@ -27,6 +33,8 @@ jobs:
       run: |
         python fetch_google_calendar_data.py 2>&1 | tee output_fetch.log
       continue-on-error: true
+      env:
+        GOOGLE_CALENDAR_CREDENTIALS: ${{ secrets.GOOGLE_CALENDAR_CREDENTIALS }}
 
     - name: Run prepare_data_for_supabase.py
       run: |
@@ -35,8 +43,13 @@ jobs:
 
     - name: Run database.py
       run: |
+        python -c "import sys; print(sys.path)"
+        python -c "import os; print(os.environ)"
         python database.py 2>&1 | tee output_database.log
       continue-on-error: true
+      env:
+        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+        SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
 
     - name: Check for errors
       run: |
@@ -49,6 +62,8 @@ jobs:
           pip list
           echo "Script contents:"
           cat fetch_google_calendar_data.py prepare_data_for_supabase.py database.py
+          echo "Environment variables (masked):"
+          env | sed 's/\(.*KEY\)=.*/\1=********/'
           exit 1
         else
           echo "All scripts executed successfully"
@@ -56,10 +71,12 @@ jobs:
         fi
 
     - name: List directory contents
-      if: failure()
+      if: always()
       run: |
         echo "Contents of the current directory:"
         ls -la
+        echo "Contents of the data directory (if exists):"
+        ls -la data || echo "data directory not found"
 
     - name: Commit and push if changed
       if: success()
