--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -8,12 +8,6 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
-    env:
-      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-      SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
-      GOOGLE_CALENDAR_CREDENTIALS: ${{ secrets.GOOGLE_CALENDAR_CREDENTIALS }}
-      # Add any other environment variables you need
-
     steps:
     - uses: actions/checkout@v4
       with:
@@ -27,56 +21,35 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client notion-client pandas supabase
+        pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client notion-client
 
-    - name: Run fetch_google_calendar_data.py
+    - name: Run sync script
       run: |
-        python fetch_google_calendar_data.py 2>&1 | tee output_fetch.log
+        python fetch_google_calendar_data.py 2>&1 | tee output.log
       continue-on-error: true
-      env:
-        GOOGLE_CALENDAR_CREDENTIALS: ${{ secrets.GOOGLE_CALENDAR_CREDENTIALS }}
-
-    - name: Run prepare_data_for_supabase.py
-      run: |
-        python prepare_data_for_supabase.py 2>&1 | tee output_prepare.log
-      continue-on-error: true
-
-    - name: Run database.py
-      run: |
-        python -c "import sys; print(sys.path)"
-        python -c "import os; print(os.environ)"
-        python database.py 2>&1 | tee output_database.log
-      continue-on-error: true
-      env:
-        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-        SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
 
     - name: Check for errors
       run: |
-        if grep -q "Traceback" output_fetch.log output_prepare.log output_database.log; then
+        if grep -q "Traceback" output.log; then
           echo "Error occurred in script execution:"
-          cat output_fetch.log output_prepare.log output_database.log
+          cat output.log
           echo "Python version:"
           python --version
           echo "Installed packages:"
           pip list
           echo "Script contents:"
-          cat fetch_google_calendar_data.py prepare_data_for_supabase.py database.py
-          echo "Environment variables (masked):"
-          env | sed 's/\(.*KEY\)=.*/\1=********/'
+          cat fetch_google_calendar_data.py
           exit 1
         else
-          echo "All scripts executed successfully"
-          cat output_fetch.log output_prepare.log output_database.log
+          echo "Script executed successfully"
+          cat output.log
         fi
 
     - name: List directory contents
-      if: always()
+      if: failure()
       run: |
         echo "Contents of the current directory:"
         ls -la
-        echo "Contents of the data directory (if exists):"
-        ls -la data || echo "data directory not found"
 
     - name: Commit and push if changed
       if: success()
@@ -84,6 +57,6 @@ jobs:
         git config --global user.name 'GitHub Action'
         git config --global user.email 'action@github.com'
         git add -A
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update chart data and sync with Supabase" && git push)
+        git diff --quiet && git diff --staged --quiet || (git commit -m "Update chart data" && git push)
       env:
         GITHUB_TOKEN: ${{ secrets.PAT }}
