--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -21,14 +21,16 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client notion-client
+        pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client notion-client pandas python-dotenv supabase
 
-    - name: Run sync script
+    - name: Run fetch_google_calendar_data.py
+      id: fetch_data
       run: |
         python fetch_google_calendar_data.py 2>&1 | tee output.log
       continue-on-error: true
 
-    - name: Check for errors
+    - name: Check for errors in fetch_google_calendar_data.py
+      id: check_errors
       run: |
         if grep -q "Traceback" output.log; then
           echo "Error occurred in script execution:"
@@ -41,9 +43,22 @@ jobs:
           cat fetch_google_calendar_data.py
           exit 1
         else
-          echo "Script executed successfully"
+          echo "fetch_google_calendar_data.py executed successfully"
           cat output.log
         fi
+
+    - name: Run prepare_data_for_supabase.py
+      id: prepare_data
+      if: steps.check_errors.outcome == 'success'
+      run: python prepare_data_for_supabase.py
+
+    - name: Run database.py
+      id: update_database
+      if: steps.prepare_data.outcome == 'success'
+      run: python database.py
+      env:
+        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+        SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
 
     - name: List directory contents
       if: failure()
