--- a/data/chart-data-Projects.json
+++ b/data/chart-data-Projects.json
@@ -298,5 +298,15 @@
     "description": "(No description)",
     "calendar_name": "Projects",
     "id": "7dafe89483ca68fa27f92b617d3e2b33"
+  },
+  {
+    "date": "2024-10-26T06:30:00+02:00",
+    "start": "2024-10-26T06:30:00+02:00",
+    "end": "2024-10-26T10:30:00+02:00",
+    "value": 1,
+    "summary": "New Event",
+    "description": "(No description)",
+    "calendar_name": "Projects",
+    "id": "8d64116a4e55749e96726fbfffa4cc36"
   }
 ]
